@@ -2,6 +2,8 @@ Revision history for SPVM
 0.9501  2021-02-01
         [CHANGE]
         * Improve comlilation error messages. All method expressions is Foo->bar.
+        * Improve comlilation error messages. All field expressions is Foo->{bar}.
+        * Improve comlilation error messages. All class variable expressions is $Foo::Bar.
 
 0.9500  2021-02-01
         [CHANGE]
